RESOLVED FIXED70639
[Qt] Wrong type conversion in InspectorServerQt.cpp
https://bugs.webkit.org/show_bug.cgi?id=70639
Summary [Qt] Wrong type conversion in InspectorServerQt.cpp
Luiz Agostini
Reported 2011-10-21 13:33:14 PDT
The WebSocket keys are been converted from string to long instead of unsigned long. This is causing WebSocket handshake failures for the remote inspector.
Attachments
patch (1.96 KB, patch)
2011-10-21 13:59 PDT, Luiz Agostini
no flags
Luiz Agostini
Comment 1 2011-10-21 13:59:42 PDT
Noam Rosenthal
Comment 2 2011-10-21 14:02:04 PDT
Comment on attachment 112017 [details] patch LGTM
WebKit Review Bot
Comment 3 2011-10-21 15:01:00 PDT
Comment on attachment 112017 [details] patch Clearing flags on attachment: 112017 Committed r98158: <http://trac.webkit.org/changeset/98158>
WebKit Review Bot
Comment 4 2011-10-21 15:01:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.