[Qt] Wrong type conversion in InspectorServerQt.cpp https://bugs.webkit.org/show_bug.cgi?id=70639

Patch by Luiz Agostini <luiz.agostini@palm.com> on 2011-10-21
Reviewed by Noam Rosenthal.

Wrong type conversion causes WebSocket handshake failures for the remote inspector.

* WebCoreSupport/InspectorServerQt.cpp:
(WebCore::parseWebSocketChallengeNumber):

Canonical link: https://commits.webkit.org/86840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98158 268f45cc-cd09-0410-ab3c-d52691b4dbfc